@@ -61,6 +61,9 @@ CertificateStorePath = /opt/opcfoundation/ualds/pki
 MaxRejectedCertificates = 50
 # MaxAge for rejected certificates: Rejected certificates will be deleted automatically after this time in days.
 MaxAgeRejectedCertificates = 1
+# If this is 'yes' then the certificate will be automatically re-created if the machine name has changed
+# Default behavior is "no".
+ReCreateOwnCertificateOnError = no
 
 [Log]
 # Log System: syslog (system log), file (custom log file)
@@ -73,6 +76,8 @@ LogLevel = error
 LogFileSize = 100
 # Activate UaStack trace: off, error, warn, info, debug
 StackTrace = error
+# LogRotateCount: Maximum number of logfiles. This is optional for LogSystem=file. Default is '0' (no restriction in logfiles)
+LogRotateCount = 0
 
 [RegisteredServers]
 # This section contains all registered server entries. The first entry is always the LDS itself.
