@@ -65,7 +65,10 @@ MaxAgeRejectedCertificates = 1
 # Windows certificate store (only for backward compatibility to old LDS store)
 # Enable certificate validation using the given windows certificate store (yes / no)
 Win32StoreCheck = yes
-
+# If this is 'yes' then the certificate will be automatically re-created if the machine name has changed
+# Default behavior is "no".
+ReCreateOwnCertificateOnError = no
+ 
 [Log]
 # Log System: syslog (system log), file (custom log file)
 LogSystem = file
@@ -77,6 +80,8 @@ LogLevel = error
 LogFileSize = 100
 # Activate UaStack trace: off, error, warn, info, debug
 StackTrace = error
+# LogRotateCount: Maximum number of logfiles. This is optional for LogSystem=file. Default is '0' (no restriction in logfiles).
+LogRotateCount = 2
 
 [RegisteredServers]
 # This section contains all registered server entries. The first entry is always the LDS itself.
